--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@houd1ni/koa",
-  "version": "2.14.2",
+  "version": "2.14.3",
   "description": "Koa web app framework",
   "main": "lib/application.js",
+  "types": "./index.d.ts",
   "exports": {
     ".": {
       "require": "./lib/application.js",
