--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@houd1ni/koa",
-  "version": "2.14.3",
+  "version": "2.14.4",
   "description": "Koa web app framework",
   "main": "lib/application.js",
   "types": "./index.d.ts",
@@ -59,7 +59,8 @@
     "only": "~0.0.2",
     "parseurl": "^1.3.2",
     "statuses": "^1.5.0",
-    "vary": "^1.1.2"
+    "vary": "^1.1.2",
+    "media-typer": "^1.1.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
