--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@houd1ni/koa",
-  "version": "2.15.12",
+  "version": "2.15.13",
   "description": "Koa web app framework",
   "type": "module",
   "types": "./index.d.ts",
@@ -50,20 +50,21 @@
     "encodeurl": "^1.0.2",
     "escape-html": "^1.0.3",
     "fresh": "~0.5.2",
-    "pepka": "^1.0.0-beta.8",
     "http-errors": "^2.0.0",
     "is-generator-function": "^1.0.10",
     "koa-compose": "^4.1.0",
     "koa-convert": "^2.0.0",
+    "media-typer": "^1.1.0",
+    "negotiator": "^0.6.3",
     "on-finished": "^2.4.1",
     "only": "~0.0.2",
     "parseurl": "^1.3.3",
+    "pepka": "^1.0.0-beta.10",
     "statuses": "^2.0.1",
-    "vary": "^1.1.2",
-    "media-typer": "^1.1.0"
+    "vary": "^1.1.2"
   },
   "devDependencies": {
-    "eslint": "^8.34.0",
+    "eslint": "^8.40.0",
     "eslint-config-koa": "^2.0.2",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -71,7 +72,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
     "gen-esm-wrapper": "^1.1.3",
-    "jest": "^29.4.3",
+    "jest": "^29.5.0",
     "supertest": "^6.3.3"
   },
   "engines": {
