--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "cache-content-type": "^1.0.1",
     "content-disposition": "~0.5.4",
-    "cookies": "~0.8.0",
+    "cookies": "~0.9.1",
     "debug": "^4.3.4",
     "delegates": "^1.0.0",
     "depd": "^2.0.0",
@@ -55,6 +55,7 @@
     "koa-compose": "^4.1.0",
     "koa-convert": "^2.0.0",
     "media-typer": "^1.1.0",
+    "mime": "^4.0.1",
     "negotiator": "^0.6.3",
     "on-finished": "^2.4.1",
     "only": "~0.0.2",
@@ -64,16 +65,16 @@
     "vary": "^1.1.2"
   },
   "devDependencies": {
-    "eslint": "^8.40.0",
+    "eslint": "^8.57.0",
     "eslint-config-koa": "^2.0.2",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
     "gen-esm-wrapper": "^1.1.3",
-    "jest": "^29.5.0",
-    "supertest": "^6.3.3"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   },
   "engines": {
     "node": ">= 18.0.0"
