--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@houd1ni/koa",
-  "version": "2.15.18",
+  "version": "2.15.19",
   "description": "Koa web app framework",
   "type": "module",
   "types": "./index.d.ts",
@@ -40,14 +40,14 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "cache-content-type": "^1.0.1",
+    "cache-content-type": "^2.0.0",
     "content-disposition": "~0.5.4",
     "cookies": "~0.9.1",
-    "debug": "^4.3.4",
+    "debug": "^4.3.7",
     "delegates": "^1.0.0",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
-    "encodeurl": "^1.0.2",
+    "encodeurl": "^2.0.0",
     "escape-html": "^1.0.3",
     "fresh": "~0.5.2",
     "http-errors": "^2.0.0",
@@ -55,26 +55,19 @@
     "koa-compose": "^4.1.0",
     "koa-convert": "^2.0.0",
     "media-typer": "^1.1.0",
-    "mime": "^4.0.1",
+    "mime": "^4.0.4",
     "negotiator": "^0.6.3",
     "on-finished": "^2.4.1",
     "only": "~0.0.2",
     "parseurl": "^1.3.3",
-    "pepka": "^1.0.0-beta.10",
+    "pepka": "^1.6.1",
     "statuses": "^2.0.1",
     "vary": "^1.1.2"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-koa": "^2.0.2",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-standard": "^5.0.0",
     "gen-esm-wrapper": "^1.1.3",
     "jest": "^29.7.0",
-    "supertest": "^6.3.4"
+    "supertest": "^7.0.0"
   },
   "engines": {
     "node": ">= 18.0.0"
