--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@houd1ni/koa",
-  "version": "2.15.20",
+  "version": "2.15.21",
   "description": "Koa web app framework",
   "type": "module",
   "types": "./index.d.ts",
+  "main": "lib/application.js",
   "exports": {
     ".": {
       "require": "./lib/application.js",
@@ -40,34 +41,34 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "cache-content-type": "^2.0.0",
-    "content-disposition": "~0.5.4",
+    "cache-content-type": "^2.1.0",
+    "content-disposition": "~1.0.1",
     "cookies": "~0.9.1",
-    "debug": "^4.3.7",
+    "debug": "^4.4.3",
     "delegates": "^1.0.0",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
     "encodeurl": "^2.0.0",
     "escape-html": "^1.0.3",
     "fresh": "~0.5.2",
-    "http-errors": "^2.0.0",
-    "is-generator-function": "^1.0.10",
+    "http-errors": "^2.0.1",
+    "is-generator-function": "^1.1.2",
     "koa-compose": "^4.1.0",
     "koa-convert": "^2.0.0",
     "media-typer": "^1.1.0",
-    "mime": "^4.0.4",
-    "negotiator": "^0.6.3",
+    "mime": "^4.1.0",
+    "negotiator": "^1.0.0",
     "on-finished": "^2.4.1",
     "only": "~0.0.2",
     "parseurl": "^1.3.3",
-    "pepka": "^1.6.1",
-    "statuses": "^2.0.1",
+    "pepka": "^1.6.23",
+    "statuses": "^2.0.2",
     "vary": "^1.1.2"
   },
   "devDependencies": {
     "gen-esm-wrapper": "^1.1.3",
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0"
+    "jest": "^30.2.0",
+    "supertest": "^7.2.2"
   },
   "engines": {
     "node": ">= 18.0.0"
